<resources>
    <string name="app_name">StockQuotes-Fergusonn</string>
    <string name="symb">Symbol</string>
    <string name="name">Company Name</string>
    <string name="last_p">Last Price</string>
    <string name="last_t">Last Time</string>
    <string name="change">Change</string>
    <string name="year_range">Yearly Range</string>
    <string name="blank"></string>
    <string name="enter">Enter Stock Symbol</string>
    <string name="prev">Previous entries</string>
    <string name="close">my bad</string>
    <string name="error">Hey buddy, that\'s not a real stock</string>





</resources>
