<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/symbol_tv"
        android:layout_marginTop="16dp"
        android:text="@string/symb"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Enter_stock" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/name_ms"
        android:layout_marginTop="@dimen/name_mt"
        android:text="@string/name"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/symbol" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/glcb" />

    <TextView
        android:id="@+id/last_trade_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="8dp"
        android:text="@string/last_p"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/c_result" />

    <TextView
        android:id="@+id/last_trade_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/last_t"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/last_trade_time" />

    <TextView
        android:id="@+id/Enter_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/esms"
        android:layout_marginTop="@dimen/esmt"
        android:text="@string/enter"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Input"
        android:layout_width="@dimen/i_land_w"
        android:layout_height="@dimen/input_land_h"
        android:layout_marginStart="@dimen/input_land_ms"
        android:layout_marginTop="@dimen/input_land_mt"
        android:inputType="textCapCharacters"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/change"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/last_trade_price" />

    <TextView
        android:id="@+id/yearly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/year_range"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/change" />

    <TextView
        android:id="@+id/s_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="16dp"
        android:text="@string/blank"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/Enter_stock" />

    <TextView
        android:id="@+id/c_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:layout_marginEnd="8dp"
        android:text="@string/blank"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/past_stocks"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/s_result" />

    <TextView
        android:id="@+id/lp_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/blank"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/c_result" />

    <TextView
        android:id="@+id/lt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/blank"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lp_result" />

    <TextView
        android:id="@+id/ch_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/blank"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lt_result" />

    <TextView
        android:id="@+id/yr_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ltt_ms"
        android:layout_marginTop="@dimen/ltt_mt"
        android:text="@string/blank"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ch_result" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/gl2cb" />

    <ListView
        android:id="@+id/past_stocks"
        android:layout_width="@dimen/lvwland"
        android:layout_height="@dimen/lvhland"
        android:layout_marginStart="@dimen/lvmsland"
        android:layout_marginTop="@dimen/lvmtland"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/prevlandms"
        android:layout_marginTop="@dimen/prevlandmt"
        android:text="@string/prev"
        android:textSize="@dimen/prev_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>